[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ct-toolkit"
version = "0.1.1"
description = "Computational Theseus Toolkit — Identity Continuity Guardrails for Agentic Systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Hakan Damar" }]
keywords = ["llm", "ai-safety", "identity-continuity", "guardrails", "alignment"]

dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "cryptography>=42.0.0",
    "SQLAlchemy>=2.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",          # For CLI reporting
]

[project.optional-dependencies]
ollama = ["ollama>=0.2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
