[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ct-toolkit"
version = "0.3.16"
description = "Computational Theseus Toolkit — Identity Continuity Guardrails for Agentic Systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Hakan Damar" }]
keywords = ["llm", "ai-safety", "identity-continuity", "guardrails", "alignment"]

dependencies = [
    "instructor>=1.3.0",
    "litellm>=1.40.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "cryptography>=46.0.6",
    "SQLAlchemy>=2.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",          # For CLI reporting
    "jinja2>=3.1.0",
    "pyasn1>=0.6.3",
    "typer[all]>=0.12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
ollama   = ["ollama>=0.2.0"]
langchain = ["langchain-core>=1.2.22"]
crewai   = ["crewai>=1.10.0"]
autogen   = ["pyautogen>=0.4.0"]
docs     = ["mkdocs-material>=9.5.0"]
ml       = ["torch>=2.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pyright.analysis]
extraPaths = ["."]

[tool.setuptools.packages.find]
include = ["ct_toolkit*"]

[tool.setuptools.package-data]
"ct_toolkit.kernels" = ["*.yaml"]
"ct_toolkit.identity.templates" = ["*.yaml"]

[project.scripts]
ct-toolkit = "ct_toolkit.cli:app"

[tool.pytest.ini_options]
extraPaths = ["."]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "twine>=6.2.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install build && python -m build"
